# connectedhomeip-1

./: .gitmodules  BUILD.gn  configure.ac
.github/: .wordlist.txt
.github/workflows/: cirque.yaml  darwin-tests.yaml  darwin.yaml  tests.yaml
config/standalone/: CHIPProjectConfig.h  standalone-chip.mk
examples/all-clusters-app/all-clusters-common/: BUILD.gn  all-clusters-app.matter  all-clusters-app.zap
examples/all-clusters-app/ameba/: chip_main.cmake
examples/all-clusters-app/linux/: Dockerfile  main-common.cpp  main.cpp
examples/all-clusters-app/mbed/: CMakeLists.txt
examples/all-clusters-app/telink/: Readme.md
examples/all-clusters-minimal-app/all-clusters-common/: all-clusters-minimal-app.matter
examples/all-clusters-minimal-app/linux/: main-common.cpp
examples/bridge-app/bridge-common/: bridge-app.matter  bridge-app.zap
examples/chef/devices/: noip_rootnode_dimmablelight_bCwGYSDpoe.matter  rootnode_contactsensor_lFAGG1bfRO.matter  rootnode_dimmablelight_bCwGYSDpoe.matter  rootnode_doorlock_aNKYAreMXE.matter  rootnode_extendedcolorlight_8lcaaYJVAa.matter  rootnode_flowsensor_1zVxHedlaV.matter  rootnode_heatingcoolingunit_ncdGai1E5a.matter  rootnode_humiditysensor_Xyj4gda6Hb.matter  rootnode_lightsensor_lZQycTFcJK.matter  rootnode_occupancysensor_iHyVgifZuo.matter  rootnode_onofflight_bbs1b7IaOV.matter  rootnode_onofflightswitch_FsPlMr090Q.matter  rootnode_onoffpluginunit_Wtf8ss5EBY.matter  rootnode_pressuresensor_s0qC9wLH4k.matter  rootnode_speaker_RpzeXdimqA.matter  rootnode_temperaturesensor_Qy1zkNW7c3.matter  rootnode_thermostat_bm3fb8dhYi.matter  rootnode_windowcovering_RLCxaGi9Yx.matter
examples/chip-tool/: BUILD.gn  README.md  chip-tool.zap  main.cpp
examples/chip-tool-darwin/: BUILD.gn  main.m
examples/chip-tool-darwin/templates/: CHIPTestClustersObjc-src.zapt  templates.json  tests.js
examples/chip-tool/config/: PersistentStorage.cpp
examples/chip-tool/templates/: JSONAttributeWriter-src.zapt  ModelCommandLogger-src.zapt  commands.zapt  helper.js  reporting-commands.zapt  response-callbacks-src.zapt  response-callbacks.zapt  templates.json  tests-commands.zapt  tests.js
examples/common/screen-framework/: ScreenManager.cpp
examples/contact-sensor-app/telink/: README.md
examples/darwin-framework-tool/: BUILD.gn  args.gni  main.mm
examples/darwin-framework-tool/templates/: commands.zapt  templates.json
examples/door-lock-app/door-lock-common/: door-lock-app.matter
examples/light-switch-app/light-switch-common/: light-switch-app.matter
examples/light-switch-app/telink/: README.md
examples/lighting-app/ameba/: chip_main.cmake
examples/lighting-app/lighting-common/: lighting-app.matter
examples/lighting-app/linux/: main.cpp
examples/lighting-app/nrfconnect/: CMakeLists.txt
examples/lighting-app/telink/: README.md
examples/lock-app/lock-common/: BUILD.gn  lock-app.matter
examples/lock-app/nrfconnect/: CMakeLists.txt
examples/memory-debug/: BUILD.gn  main-failure.mm  main-success.mm  main.cpp
examples/ota-requestor-app/ota-requestor-common/: BUILD.gn  ota-requestor-app.matter
examples/ota-requestor-app/telink/: Readme.md
examples/placeholder/configurations/: BUILD.gn  app1.zap.config  app2.zap.config
examples/placeholder/linux/: BUILD.gn  main.cpp
examples/platform/linux/: AppMain.cpp
examples/pump-app/pump-common/: pump-app.matter
examples/pump-controller-app/pump-controller-common/: pump-controller-app.matter
scripts/: BUILD.gn  requirements.txt
scripts/examples/: gn_build_test_example.sh
scripts/py_matter_yamltests/: test_parser_builder.py  test_pics_checker.py
scripts/tests/: cirque_tests.sh  run_test_suite.py  run_yaml_test.py  test_suites.sh
scripts/tools/: zap_regen_all.py
src/app/: CommandHandler.cpp  DeviceProxy.h  InteractionModelEngine.cpp  InteractionModelEngine.h  OperationalDeviceProxy.h  WriteHandler.cpp  chip-zcl-zpro-codec-api.h  chip-zcl-zpro-codec.h  chip_data_model.cmake  chip_data_model.gni  encoder.cpp
src/ble/: BUILD.gn  BleLayer.cpp  BleLayer.h
src/controller/: AutoCommissioner.cpp  BUILD.gn  CHIPCluster.cpp  CHIPCluster.h  CHIPClusters.cpp  CHIPClusters.h  CHIPDevice.cpp  CHIPDevice.h  CHIPDeviceController.cpp  CHIPDeviceController.h  CHIPDeviceControllerFactory.cpp  CHIPDeviceControllerFactory.h  CHIPDeviceControllerSystemState.h  CommissioneeDeviceProxy.h  OnOffCluster.cpp  OnOffCluster.h  SetUpCodePairer.cpp  SetUpCodeParser.cpp  SetUpCodeParser.h  controller-clusters.zap
src/messaging/: ExchangeMgr.cpp
src/platform/: BUILD.gn  DeviceNetworkInfo.cpp  Makefile.am  device.gni
src/system/: SystemLayer.h  SystemLayerImplDispatch.cpp  SystemLayerImplDispatch.h  SystemLayerImplSelect.cpp  SystemTimer.h  system.gni
src/transport/: BLE.cpp  BLE.h  BUILD.gn  RendezvousParameters.h  RendezvousSession.cpp  RendezvousSession.h  SecurePairingSession.cpp  SecurePairingSession.h  SecureSessionMgr.cpp  TCP.cpp  TCP.h  TransportLayer.am  UnauthenticatedSessionTable.h
(+552 files in other folders)
